--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "server": "node server/server.js"
+    "server": "nodemon server/server.js"
   },
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
+    "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.5",
+    "node-fetch": "^2.1.2",
     "vue": "^2.5.13",
     "vuex": "^3.0.1"
   },
